# malpy3

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.rst  malpy3.rst  modules.rst
mal/: __init__.py  api.py  cli.py  color.py  commands.py  core.py  login.py  setup.py  utils.py
malpy3/: __init__.py  api.py  cli.py  commands.py  core.py  login.py  setup.py  utils.py
